# node-ms-passport

./: .clang-format  .gitignore  .npmignore  CMakeLists.txt  LICENSE  README.md  binding.gyp  copy-deps.js  dummies.js  index.d.ts  index.js  install.js  node-ms-passport.js  package-lock.json  package.json  passportTest.js  prebuild.js  test.js
.github/workflows/: node.js.yml  publish.yml
NodeMsPassport/: NodeMsPassport.sln
NodeMsPassport/CSNodeMsPassport/: CSNodeMsPassport.csproj  Passport.cs  passport.snk
NodeMsPassport/CSNodeMsPassport/Properties/: AssemblyInfo.cs
NodeMsPassport/CSNodeMsPassport/util/: SubjectPublicKeyInfo.cs
NodeMsPassport/GacInstaller/: GacInstaller.cs  GacInstaller.csproj  gacinstaller.snk
NodeMsPassport/GacInstaller/Properties/: AssemblyInfo.cs
NodeMsPassport/NodeMsPassport/: AssemblyInfo.cpp  NodeMsPassport.cpp  NodeMsPassport.h  NodeMsPassport.hpp  NodeMsPassport.vcxproj  NodeMsPassport.vcxproj.filters  cpp.hint
NodeMsPassport/Setup/: Product.wxs  Setup.wixproj
cpp_src/: CLITools.cpp  CLITools.hpp  NodeMsPassport.cpp  NodeMsPassport.hpp  credential_reader.cpp  credential_reader.hpp  msPassport.cpp  util.hpp
cpp_src/node_classes/: credential.cpp  credential.hpp  credential_store.cpp  credential_store.hpp
cs_src/: Exceptions.cs  LoginData.cs  Passport.cs  PasswordVault.cs  SubjectPublicKeyInfo.cs
src/: CMakeLists.txt  msPassport.cpp
test/: passportTest.js  test.js  unixTest.js
